[workspace]
members = ["crates/*"]
default-members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
axum = "0.6"
cfg-if = "1"
clap = "4"
console_error_panic_hook = "0.1"
darling = "0.14"
http = "0.2"
indexmap = "1"
insta = "1"
leptos = { git = "https://github.com/leptos-rs/leptos", rev = "8a99623" }
leptos_meta = { git = "https://github.com/leptos-rs/leptos", rev = "8a99623" }
leptos_router = { git = "https://github.com/leptos-rs/leptos", rev = "8a99623" }
leptos_config = { git = "https://github.com/leptos-rs/leptos", rev = "8a99623" }
once_cell = "1"
parking_lot = "0.12"
playwright = "0.0.20"
proc-macro2 = "1"
quote = "1"
futures = "0.3"
hyper = "0.14"
regex = "1"
serde = "1"
serde_json = "1"
smallvec = "1"
syn = "1"
thiserror = "1"
tokio = "1"
tower = "0.4"
tower-http = "0.3"
typed-builder = "0.12.0"
walkdir = "2"
wasm-bindgen = "0.2"
wasm-bindgen-cli-support = "0.2"
wasm-bindgen-test = "0.3"
web-sys = "0.3"

# internal
leptoskit = { path = "crates/leptoskit", version = "0.0.0" }
leptoskit_core = { path = "crates/leptoskit_core", version = "0.0.0" }
leptoskit_routes = { path = "crates/leptoskit_routes", version = "0.0.0" }
leptoskit_routes_macros = { path = "crates/leptoskit_routes_macros", version = "0.0.0" }

[workspace.package]
version = "0.0.0"
homepage = "https://github.com/ifiokjr/leptoskit"
repository = "https://github.com/ifiokjr/leptoskit"
