[workspace]
members = ["crates/*"]
default-members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.0"
authors = ["Ifiok Jr. <ifiokotung@gmail.com>"]
edition = "2024"
homepage = "https://github.com/ifiokjr/leptoskit"
license = "Unlicense"
repository = "https://github.com/ifiokjr/leptoskit"
rust-version = "1.85.0"

[workspace.dependencies]
any_spawner = "0.2"
anyhow = "1"
axum = "0.8"
cfg-if = "1"
chrono = "0.4"
clap = "4"
codee = "0.3"
console_error_panic_hook = "0.1"
darling = "0.20"
derive_more = "2"
futures = "0.3"
http = "1"
hydration_context = "0.3"
hyper = "1"
indexmap = "2"
insta = "1"
leptos = "0.8.0-alpha"
leptos-use = "0.16.0-alpha"
leptos_config = "0.8.0-alpha"
leptos_meta = "0.8.0-alpha"
leptos_router = "0.8.0-alpha"
once_cell = "1"
parking_lot = "0.12"
paste = "1"
playwright = "0.0.20"
proc-macro2 = "1"
quote = "1"
regex = "1"
rstest = "0.25"
send_wrapper = "0.6"
serde = "1"
serde_json = "1"
smallvec = "1"
syn = "2"
thiserror = "2"
tokio = "1"
tower = "0.5"
tower-http = "0.6"
typed-builder = "0.20"
walkdir = "2"
wasm-bindgen = "0.2"
wasm-bindgen-cli-support = "0.2"
wasm-bindgen-test = "0.3"
web-sys = "0.3"

# internal
leptos_cache = { path = "crates/leptos_cache", version = "0.0.0" }
leptos_testing_library = { path = "crates/leptos_testing_library", version = "0.0.0" }
leptoskit = { path = "crates/leptoskit", version = "0.0.0" }

[workspace.metadata.bin]
cargo-insta = { version = "1.42.2" }
cargo-llvm-cov = { version = "0.6.16" }
cargo-nextest = { version = "0.9.92" }
cargo-semver-checks = { version = "0.40.0" }
leptosfmt = { git = "https://github.com/bram209/leptosfmt", rev = "453618e", version = "0.1.33", bins = ["leptosfmt"] }
release-plz = { version = "0.3.127", bins = ["release-plz"] }
wasm-bindgen-cli = { version = "0.2.100", bins = ["wasm-bindgen", "wasm-bindgen-test-runner"] }

[workspace.lints.rust]
# Group lints
rust_2021_compatibility = { level = "deny", priority = -1 }
rust_2024_compatibility = { level = "deny", priority = -1 }

# Individual lints
unsafe_code = "deny"
unstable_features = "deny"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"

[workspace.lints.clippy]
# Group lints
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# Individual lints
blocks_in_conditions = "allow"
cargo_common_metadata = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
expl_impl_clone_on_copy = "allow"
items_after_statements = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
no_effect_underscore_binding = "allow"
tabs-in-doc-comments = "allow"
too_many_lines = "allow"
wildcard_dependencies = "deny"
wildcard_imports = "allow"
