[package]
name = "leptoskit"
version = "0.0.0"
categories = ["wasm", "web-programming"]
documentation = "https://docs.rs/leptoskit"
edition = "2021"
homepage = "https://github.com/ifiokjr/leptoskit"
include = ["src/**/*.rs", "Cargo.toml", "readme.md"]
keywords = ["leptos", "aria", "fullstack"]
license = "Unlicense"
readme = "readme.md"
repository = "https://github.com/ifiokjr/leptoskit"
rust-version = "1.67.0"
description = "Accessible components for the leptos framework"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { workspace = true }
