[package]
name = "leptoskit"
version = { workspace = true }
categories = ["wasm", "web-programming"]
documentation = "https://docs.rs/leptoskit"
edition = "2021"
homepage = { workspace = true }
include = ["src/**/*.rs", "Cargo.toml", "readme.md"]
keywords = ["leptos", "fullstack"]
license = "Unlicense"
readme = "readme.md"
repository = { workspace = true }
rust-version = "1.67.0"
description = "A build system for the Leptos web framework."

[dependencies]
leptos = { workspace = true, default-features = false, features = [] }
