[package]
name = "leptoskit_core"
version = "0.0.0"
categories = ["wasm", "web-programming"]
documentation = "https://docs.rs/leptoskit"
edition = "2021"
homepage = "https://github.com/ifiokjr/leptoskit"
include = ["src/**/*.rs", "Cargo.toml", "readme.md"]
keywords = ["leptoskit", "core"]
license = "Unlicense"
readme = "readme.md"
repository = "https://github.com/ifiokjr/leptoskit"
rust-version = "1.67.0"
description = "Core functionality used throughout leptoskit libraries."

[dependencies]
