[package]
name = "leptoskit_core"
version = { workspace = true }
categories = ["wasm", "web-programming"]
documentation = "https://docs.rs/leptoskit"
edition = "2021"
homepage = { workspace = true }
include = ["src/**/*.rs", "Cargo.toml", "readme.md"]
keywords = ["leptoskit", "core"]
license = "Unlicense"
readme = "readme.md"
repository = { workspace = true }
rust-version = "1.67.0"
description = "Core functionality used throughout leptoskit libraries."

[dependencies]
