[package]
name = "leptoskit_routes"
version = { workspace = true }
categories = ["wasm", "web-programming"]
documentation = "https://docs.rs/leptoskit"
edition = "2021"
homepage = { workspace = true }
include = ["src/**/*.rs", "Cargo.toml", "readme.md"]
keywords = ["leptoskit", "plugin", "routes", "file router"]
license = "Unlicense"
readme = "readme.md"
repository = { workspace = true }
rust-version = "1.67.0"
description = "Add file routing to `leptoskit`."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptoskit_routes_macros = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["json"] }
