[package]
name = "leptoskit_routes_macros"
version = "0.0.0"
categories = ["wasm", "web-programming"]
documentation = "https://docs.rs/leptoskit"
edition = "2021"
homepage = "https://github.com/ifiokjr/leptoskit"
include = ["src/**/*.rs", "Cargo.toml", "readme.md"]
keywords = ["leptoskit", "routes", "file router"]
license = "Unlicense"
readme = "readme.md"
repository = "https://github.com/ifiokjr/leptoskit"
rust-version = "1.67.0"
description = "Macros for `leptoskit` file routing."

[lib]
proc-macro = true

[dependencies]
darling = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["json"] }
